# solana-ride-sharing-dapp

./: README.md  package-lock.json  package.json
program/: Cargo.toml
program/src/: helper.rs  lib.rs  processor.rs  structs.rs
public/: index.html  manifest.json
server/: index.js
src/: App.css  App.tsx
src/arweave/: arweave.ts
src/arweave/wallet/: gen-wallet.ts
src/components/: MainView.tsx  NewRideView.tsx  Profile.tsx  RideView.tsx  RidesView.tsx  UseInterval.tsx
src/components/Driver/: DriverOngoingRide.tsx  DriverView.tsx
src/components/Profiles/: CustomerView.tsx
src/solana/: accounts.ts  profile.ts  program.ts  wallet.ts
src/utils/: data.ts  util.ts
