
[package]
name = "cab-sharing-program"
version = "0.0.1"
description = "Cab sharing poc"
authors = ["Rahul Srivastava <gemini.rahul@gmail.com>"]
repository = "https://github.com/rotcan"
license = "Apache-2.0"
homepage = "https://rotatingcanvas.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.7.1"

[dev-dependencies]
solana-program-test = "=1.7.1"
solana-sdk = "=1.7.1"

[lib]
name = "cabaggprogram"
crate-type = ["cdylib", "lib"]
